--- a/engine.cfg
+++ b/engine.cfg
@@ -18,3 +18,7 @@ right=[key(D)]
 fire_primary=[mbutton(0, 1)]
 fire_secondary=[mbutton(0, 2)]
 fire_special=[key(C)]
+
+[render]
+
+default_clear_color=#ff1b234c
