Menu added / bug fixes / some other improvements

--- a/engine.cfg
+++ b/engine.cfg
@@ -18,6 +18,7 @@ right=[key(D)]
 fire_primary=[mbutton(0, 1)]
 fire_secondary=[mbutton(0, 2)]
 fire_special=[key(C)]
+open_menu=[key(Escape)]
 
 [render]
 
