--- a/engine.cfg
+++ b/engine.cfg
@@ -6,8 +6,12 @@ icon="icon.png"
 
 [display]
 
-width=1280
-height=800
+width=1366
+height=768
+fullscreen=false
+resizable=true
+stretch_mode="2d"
+stretch_aspect="keep"
 
 [input]
 
